# titanic-ml-classification

./: LICENSE  README.md  pyproject.toml
data/: rf_titanic_v1.pkl  scaler_v1.pkl
notebooks/: titanic_classification.ipynb  titanic_classification.py
